RESOLVED FIXED303930
youtube.com player controls stop working via touch when touch event regions are enabled
https://bugs.webkit.org/show_bug.cgi?id=303930
Summary youtube.com player controls stop working via touch when touch event regions a...
Lily Spiniolas
Reported 2025-12-10 10:43:30 PST
Attachments
Lily Spiniolas
Comment 1 2025-12-10 10:47:09 PST
EWS
Comment 2 2025-12-10 10:57:09 PST
Committed 304239@main (56ee66ab50b4): <https://commits.webkit.org/304239@main> Reviewed commits have been landed. Closing PR #55182 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.