youtube.com player controls stop working via touch when touch event regions are enabled https://bugs.webkit.org/show_bug.cgi?id=303930 rdar://166193793

Reviewed by Wenson Hsieh and Tim Horton.

We currently translate touch action regions and wheel event regions in
`EventRegion::translate` so that the regions can be positioned correctly
if they need to be offset. Do the same for touch event regions.

* Source/WebCore/rendering/EventRegion.cpp:
(WebCore::EventRegion::translate):

Canonical link: https://commits.webkit.org/304239@main